# bare-compat-napi

./: CMakeLists.txt  js.h  package.json
.github/workflows/: test.yml
include/: js.h  utf.h
include/bare/: module.h
test/: CMakeLists.txt
test/fixtures/c/: CMakeLists.txt  package.json
test/fixtures/c++/: CMakeLists.txt
